--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav>
        <div class="container main-nav flex">
         <a href="#" class="company-logo">
-            <im src="./assets/asset 1.pn" alt="company logo"><h1 style="color:black;background-color: aqua;">The Generations</h1>
+            <img src="./assets/Logo.png" alt="company logo">
         </a>
         <div class="nav-links" id="nav-links">
             <ul class="flex">
