--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="header-left">
                 <h1>Design confidently.</h1>
                 <p>The Generations is a remote user research Company that takes the quesswork out of design decisions by validating them with real users.</p>
-                <a href="#" class="primary-button get-started-btn">Get Started</a>
+                <a href="#form" class="primary-button get-started-btn">Get Started</a>
             </div>
             <div class="header-right">
                 <img src="./assets/asset 2.png" alt="hero image">
@@ -181,7 +181,7 @@
     </section>
 <!-- cta-section -->
     <section class="cta-section">
-        <div class="container flex cta-section-container">
+        <div id="form" class="container flex cta-section-container">
             <!-- <h2 class="cta-heading-text">Start testing today</h2> 
             <p>Take the guesswork out of design decisions</p>
             <a href="#" class="primary-button">Get Started</a> -->
@@ -197,6 +197,7 @@
             <textarea type="message" rows="4" cols="4" min="5" name="Message" required placeholder="How can we help you?"></textarea>
             <button type="submit">Submit</button>
             </form>
+            <a href="https://instagram.com/the_.generations?igshid=NTc4MTIwNjQ2YQ=="><img src="./assets/insta.png" alt=""></a>
         </div>
     </section>
 <!-- footer  -->
