--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     <footer>
         <div class="container flex footer-container">
             <a href="#" class="company-logo">
-                <!-- <img src="./assets/asset 1.png" alt=""> --><h1 style="color:black;background-color: aqua;">The Generations</h1>
+                <img src="./assets/Logo.png" alt="company logo">
             </a>
             <div class="link-column flex ">
                 <h4>Services</h4>
