--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li><a href="#" class="hover-link">Services</a></li>
                 <li><a href="#" class="hover-link">About me</a></li>
                 <li><a href="#" class="hover-link">Contact</a></li>
-                <li><a href="#" class="hover-link secondary-button"><img src="./assets/insta.png" alt=""></a></li>
+                <li><a href="https://instagram.com/the_.generations?igshid=NTc4MTIwNjQ2YQ==" class="hover-link secondary-button"><img src="./assets/insta.png" alt=""></a></li>
                 <li><a href="#" cllass="hover-link primary-button"></a><img src="./assets/yt.png" alt=""></li>
             </ul>
         </div>
@@ -198,6 +198,8 @@
             <button type="submit">Submit</button>
             </form>
             <a href="https://instagram.com/the_.generations?igshid=NTc4MTIwNjQ2YQ=="><img src="./assets/insta.png" alt=""></a>
+            <a href="#"><img src="./assets/yt.png" alt=""></a>
+            <a href="#"><i class="fa-brands fa-youtube fa-bounce"></i></a>
         </div>
     </section>
 <!-- footer  -->
