--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             </form>
             <a href="https://instagram.com/the_.generations?igshid=NTc4MTIwNjQ2YQ=="><img src="./assets/insta.png" alt=""></a>
             <a href="#"><img src="./assets/yt.png" alt=""></a>
-            <a href="#"><i class="fa-brands fa-youtube fa-bounce"></i></a>
+            <a href="#"><<i class="fa-brands fa-youtube fa-bounce fa-lg" style="color: #ff0000;"></i></a>
         </div>
     </section>
 <!-- footer  -->
