link animation project

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <!-- <img src="./assets/asset 11.svg" alt=""> --><div class="lds-hourglass"></div>
                     <h3>Animation</h3>                    
                     <p>Discover 2D ,3D & White Board Animation information.</p>
-                    <a href="#" class="secondary-buttton">View Projects<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                    <a href="./Project/Animation/index.html" class="secondary-buttton">View Projects<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
                 </div>
                 <div class="features-card flex">
                     <img src="./assets/asset 13.svg" alt="">
