--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="My The Generation House website is best freelance for graphic design,coding,animation,programming,video editing.">
     <meta name="keywords" content="The Generation House Website, the generations website">
     <meta name="author" content="Mohammad Saif">
-    <title>Layout</title>
+    <title>The Generation House</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media-queries.css">
 </head>
@@ -30,8 +30,8 @@
             <ul class="flex">
                 <li><a style="color:#0084e2;" href="#" class="hover-link" >Home</a></li>
                 <li><a href="#" class="hover-link">Services</a></li>
-                <li><a href="#" class="hover-link">About me</a></li>
-                <li><a href="#" class="hover-link">Contact</a></li>
+                <li><a href="./About/index.html" class="hover-link">About me</a></li>
+                <li><a href="#form" class="hover-link">Contact</a></li>
                 <li><a href="https://instagram.com/the_.generations?igshid=NTc4MTIwNjQ2YQ==" target="_blank" class="hover-link secondary-button"><img src="./assets/insta.png" alt=""></a></li>
                 <li><a href="#" cllass="hover-link primary-button"></a><img src="./assets/yt.png" alt=""></li>
             </ul>
@@ -87,7 +87,7 @@
                     <img src="./assets/asset 13.svg" alt="">
                     <h3>Poster and Banner</h3>
                     <p>Discover New Poster & Banner label information.</p>
-                    <a href="#" class="secondary-buttton">View Projects<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                    <a href="./Project/Poster and Banner/index.html" class="secondary-buttton">View Projects<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
                 </div>
                 <div class="features-card flex">
                     <img src="./assets/asset 14.svg" alt="">
@@ -103,7 +103,7 @@
                 </div>
                 <div class="features-card flex">
                     <img src="./assets/asset 16.svg" alt="">
-                    <h3>VFX & GFX</h3>
+                    <h3>Visual Effects</h3>
                     <p>Discover Realistic Movie Clip information.</p>
                     <a href="#" class="secondary-buttton">View Projects<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
                 </div>
@@ -159,7 +159,7 @@
     <section class="example-section">
         <div class="container">
             <div class="example-header flex">
-                <h2 class="example-heading-text">One platform,<mark> endless possibilities</mark></h2>
+                <h2 class="example-heading-text">One platform,<span style="background: #183b54;color:#fff"> endless possibilities</span></h2>
                 <a href="#" class="secondary-buttton">See more examples<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
             </div>
             <div class="examples-area flex">
@@ -197,9 +197,14 @@
             <textarea type="message" rows="4" cols="4" min="5" name="Message" required placeholder="How can we help you?"></textarea>
             <button type="submit">Submit</button>
             </form>
-            <a href="https://instagram.com/the_.generations?igshid=NTc4MTIwNjQ2YQ==" target="_blank"><img src="./assets/insta.png" alt=""></a>
-            <a href="#"><img src="./assets/yt.png" alt=""></a>
-            <a href="#"><i class="fa-brands fa-youtube fa-bounce fa-2xl" style="color: #ff0505;"></i></a>
+            <!-- <a href="https://instagram.com/the_.generations?igshid=NTc4MTIwNjQ2YQ==" target="_blank"><img src="./assets/insta.png" alt=""></a> -->
+            <ul class="fle" style="display:flex;padding:10px 0;">
+                <li><a href="https://instagram.com/the_.generations?igshid=NTc4MTIwNjQ2YQ==" target="_blank"><i class="fa-brands fa-instagram fa-bounce fa-2xl" style="color: #000000;"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-youtube fa-bounce fa-2xl" style="color: #ff0505;"></i></a></li>                
+                <li><a href="#"><i class="fa-brands fa-facebook fa-bounce fa-2xl" style="color: #000000;"></i></a></li>
+            </ul>
+            
+            
         </div>
     </section>
 <!-- footer  -->
