--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <section class="feature-section">
         <div class="container">
             <div class="feature-header">
-                <h2 class="feature-heading-text">WE ARE THE COOLEST PROFESSIONAL GRAPHIC DESIGN COMPANY AT <mark>LOW PRICE</mark></h2>
+                <h2 class="feature-heading-text">WE ARE THE COOLEST PROFESSIONAL GRAPHIC DESIGN COMPANY AT <span style="background: #183b54;color:#fff"> Affordable Price</span></h2>
                 <a href="#" class="secondary-buttton">See all features<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
             </div>
             <div class="feature-area flex">
