--- a/About/index.html
+++ b/About/index.html
@@ -1,26 +1,271 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
-    <link rel="stylesheet" href="style.css">
+    <title>My Portfolio</title>
+
+    <!-- font awesome cdn link  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
+    <!-- custom css file link  -->
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
-    <div class="about-section">
-        <div class="inner-container">
-            <h1>About Me</h1>
-            <p class="text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus velit ducimus, enim inventore earum, eligendi nostrum pariatur necessitatibus eius dicta a voluptates sit deleniti autem error eos totam nisi neque voluptates sit deleniti autem error eos totam nisi neque.
-            </p>
-            <div class="skills">
-                <span>Web Design</span>
-                <span>Photoshop & Illustrator</span>
-                <span>Coding</span>
-                <span>Video Editing</span>
-                <span>Animation</span>
-                <span>Poster Design</span>
+    
+<!-- header section starts  -->
+
+<header class="header">
+
+    <div class="user">
+        <img src="image/user-img (3).jpg" alt="">
+        <h3>Mohammad Saif</h3>
+        <p>Front-End Developer</p>
+    </div>
+
+    <nav class="navbar">
+        <a href="#home">home</a>
+        <a href="#about">about</a>
+        <a href="#services">services</a>
+        <a href="#portfolio">portfolio</a>
+        <a href="#contact">contact</a>
+    </nav>
+
+</header>
+
+<!-- header section ends -->
+
+<div id="menu-btn" class="fas fa-bars"></div>
+
+<!-- theme toggler  -->
+
+<div id="theme-toggler" class="fas fa-moon"></div>
+
+<!-- home section starts  -->
+
+<section class="home" id="home">
+
+    <div class="content">
+        <h3>Mohammad Saif</h3>
+        <p>i am a front-end developer</p>
+        <a href="#" class="btn">download CV</a>
+    </div>
+
+    <div class="share">
+        <a href="#" class="fab fa-facebook-f"></a>
+        <a href="#" class="fab fa-twitter"></a>
+        <a href="#" class="fab fa-instagram"></a>
+        <a href="#" class="fab fa-linkedin"></a>
+        <a href="#" class="fab fa-pinterest"></a>
+    </div>
+
+</section>
+
+<!-- home section ends -->
+
+<!-- about section starts  -->
+
+<section class="about" id="about">
+
+    <h1 class="heading"> <span>about</span> me </h1>
+
+    <div class="row">
+
+        <div class="box-container">
+            <div class="box">
+                <h3>2+</h3>
+                <p>years of experience</p>
+            </div>
+            <div class="box">
+                <h3>450+</h3>
+                <p>satisfied clients</p>
+            </div>
+            <div class="box">
+                <h3>190+</h3>
+                <p>working hours</p>
+            </div>
+            <div class="box">
+                <h3>10+</h3>
+                <p>awards won</p>
             </div>
         </div>
+
+        <div class="content">
+            <h3>I'm <span>Mohammad Saif</span></h3>
+            <p>I Love to Design the Things with the surrounding nature and program with their respective environment</p>
+            <a href="#" class="btn">contact me</a>
+        </div>
+
     </div>
+
+    <div class="row">
+
+        <div class="progress">
+            <h3> web design <span>90%</span> </h3>
+            <div class="bar bar-1-1"><span></span></div>
+            <h3> graphic design <span>75%</span> </h3>
+            <div class="bar bar-1-2"><span></span></div>
+            <h3> UI/UX design <span>80%</span> </h3>
+            <div class="bar bar-1-3"><span></span></div>
+        </div>
+
+        <div class="progress">
+            <h3> HTML <span>95%</span> </h3>
+            <div class="bar bar-2-1"><span></span></div>
+            <h3> CSS <span>80%</span> </h3>
+            <div class="bar bar-2-2"><span></span></div>
+            <h3> javascript <span>65%</span> </h3>
+            <div class="bar bar-2-3"><span></span></div>
+        </div>
+
+    </div>
+
+</section>
+
+<!-- about section ends -->
+
+<!-- services section starts  -->
+
+<section class="services" id="services">
+
+    <h1 class="heading"> my <span>services</span> </h1>
+
+    <div class="box-container">
+
+        <div class="box">
+            <i class="fas fa-code"></i>
+            <h3>web design</h3>
+            <p>Web design is the art of planning and arranging content on a website so that it can be shared and accessed online with the world. A combination of aesthetic and functional elements, web design is a type of digital design that determines the look of a website—such as its colors, fonts, graphics and user interface.</p>
+        </div>
+
+        <div class="box">
+            <i class="fas fa-paint-brush"></i>
+            <h3>graphic design</h3>
+            <p>A graphic designer creates useful, meaningful, and functional visuals using various means of technology. The work depends largely on a client's or company's needs, but general designer responsibilities may include: Developing visual assets to support a marketing campaign. Designing a graphic overlay for social media posts.</p>
+        </div>
+
+        <div class="box">
+            <i class="fas fa-mobile"></i>
+            <h3>responsive design</h3>
+            <p>Responsive web design, or RWD, is a design approach that addresses the range of devices and device sizes, enabling automatic adaption to the screen, whether the content is viewed on a tablet, phone, television, or watch.</p>
+        </div>
+
+        <div class="box">
+            <i class="fas fa-bullhorn"></i>
+            <h3>digital marketing</h3>
+            <p>Digital marketing, or online marketing, is a form of advertising that uses the internet and digital technologies to connect with customers.Rather than traditional media, such as print, radio, or television, digital marketing uses computers, mobile, social media, search engines, and other digital channels to reach consumers wherever they spend the most time.</p>
+        </div>
+
+        <div class="box">
+            <i class="fas fa-search-dollar"></i>
+            <h3>SEO marketing</h3>
+            <p>An SEO marketing strategy makes it easier for search engines like Google and Bing to "crawl" your content and determine how it should rank on SERPs. SEO tends to fall into three categories: On-page SEO refers to a webpage's content and how it's crafted. Search engines are looking for content that is relevant to the keyword, satisfies .</p>
+        </div>
+
+        <div class="box">
+            <i class="fab fa-wordpress"></i>
+            <h3>wordpress</h3>
+            <p>Built by an open source community with decades of experience, its passionate contributors are committed to keeping WordPress as stable and secure as possible. One platform, millions of possibilities. Global creative agencies, local businesses, and even your neighbor's personal blog are already using WordPress.</p>
+        </div>
+
+    </div>
+
+</section>
+
+<!-- services section ends -->
+
+<!-- portfolio section starts  -->
+
+<section class="portfolio" id="portfolio">
+
+    <h1 class="heading"> my <span>portfolio</span> </h1>
+
+    <div class="box-container">
+
+        <div class="box">
+            <img src="image/img-1 (2).jpg" alt="">
+            <div class="content">
+                <h3>project 01</h3>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="image/img-2.png" alt="">
+            <div class="content">
+                <h3>project 02</h3>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="image/img-3.png" alt="">
+            <div class="content">
+                <h3>project 03</h3>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="image/img-4.png" alt="">
+            <div class="content">
+                <h3>project 04</h3>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="image/img-5.png" alt="">
+            <div class="content">
+                <h3>project 05</h3>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="image/img-6.jpg" alt="">
+            <div class="content">
+                <h3>project 06</h3>
+            </div>
+        </div>
+
+    </div>
+
+</section>
+
+<!-- portfolio section ends -->
+
+<!-- contact section starts -->
+
+<section class="contact" id="contact">
+
+    <h1 class="heading"> <span>contact</span> me </h1>
+
+    <form action="">
+        <input type="text" placeholder="Full name" class="box">
+        <input type="email" placeholder="Email" class="box">
+        <input type="text" placeholder="Subject" class="box">
+        <textarea name="" class="box" placeholder="Type message..." id="" cols="30" rows="10"></textarea>
+        <input type="submit" value="send message" class="btn">
+    </form>
+
+</section>
+
+<!-- contact section ends -->
+
+<div class="credits"> created by <span>Mohammad Saif</span> | all rights reserved </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- custom js file link  -->
+<script src="js/script.js"></script>
+
 </body>
 </html>
