--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
         <div class="nav-links" id="nav-links">
             <ul class="flex">
                 <li><a style="color:#0084e2;" href="#" class="hover-link" >Home</a></li>
-                <li><a href="#" class="hover-link">Services</a></li>
+                <li><a href="#" class="hover-link">Services</a>
+                <ul>
+                    <li><a href="./real-estate/index.html">Real State</a></li>
+                </ul></li>
                 <li><a href="./About/index.html" class="hover-link">About me</a></li>
                 <li><a href="#form" class="hover-link">Contact</a></li>
                 <li><a href="https://instagram.com/the_.generations?igshid=NTc4MTIwNjQ2YQ==" target="_blank" class="hover-link secondary-button"><img src="./assets/insta.png" alt=""></a></li>
